config-root/namespaces/jx-staging/cd-flow-ui/cd-flow-ui-cd-flow-ui-deploy.yaml
# Source: cd-flow-ui/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cd-flow-ui-cd-flow-ui
  labels:
    draft: draft-app
    chart: "cd-flow-ui-0.1.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: cd-flow-ui-cd-flow-ui
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: cd-flow-ui-cd-flow-ui
    spec:
      serviceAccountName: cd-flow-ui-cd-flow-ui
      containers:
        - name: cd-flow-ui
          image: "gcr.io/camunda-researchanddevelopment/cd-flow-ui:0.1.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
