config-root/namespaces/jx-staging/cd-flow-ui/cd-flow-ui-ingress.yaml
# Source: cd-flow-ui/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: cd-flow-ui
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: cd-flow-ui
              servicePort: 80
      host: cd-flow-ui-jx-staging.35.222.17.41.nip.io
